# learning-ia-trading-avanced

./: .gitignore  README.md  app.py  config.py  database.py  models.py  pyproject.toml
routes/: signal_routes.py
static/css/: modern.css  styles.css  white-text.css
static/js/: backtest.js  bitcoin-price.js  chart.js  dashboard.js  modern.js  signals.js  trading.js
templates/: ai_predictions.html  backtest.html  base.html  dashboard.html  index.html  login.html  paper_trading.html  register.html  settings.html  signals.html  technical_analysis.html
utils/: backtesting.py  binance_api.py  prediction_model.py  technical_indicators.py
